--- a/.env
+++ b/.env
@@ -29,3 +29,7 @@ DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&ch
 DATABASE_URL="postgresql://postgres:postgres@127.0.0.1:5432/db_bugtracker?serverVersion=15&charset=utf8"
 
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
